--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,5 @@ jobs:
         with:
           context: .    
           push: true
-          tags: ${{secrets.DOCKER_NAME}}/fast_api_latest   
+          tags: ${{secrets.DOCKER_NAME}}/fast_api_latest:${{github.run_number}}
+    
