--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,22 @@ jobs:
           context: .    
           push: true
           tags: ${{secrets.DOCKER_NAME}}/fast_api_latest:${{github.run_number}}
+
+      - name: Checkout private repo
+        uses: actions/checkout@v3
+        with:
+          repository: luizpires28/my_fastapi_project_pv
+          token: ${{secrets.ARGOCD_PASS}}
+ 
+      - name: Update deployment.yaml
+        run: |
+          sed -i 's|image:.*|image: '${{secrets.DOCKER_NAME}}/fast_api_latest:${{github.run_number}}'|' deployment.yaml
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add values.yaml
+          git commit -m "Update image tag to ${{secrets.DOCKER_NAME}}/fast_api:${{github.run_number}}"
+          git push origin master
+         
     
