--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add values.yaml
+          git add deployment.yaml
           git commit -m "Update image tag to ${{secrets.DOCKER_NAME}}/fast_api:${{github.run_number}}"
           git push origin master
          
